--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -32,3 +32,6 @@ jobs:
       run: |
         conda install pytest
         pytest
+    - name: List directory
+      run: ls -R /home/runner/work/bed_check/bed_check/
+
